--- a/templates/blog.html
+++ b/templates/blog.html
@@ -10,23 +10,13 @@
   <link rel="stylesheet" href="css/blog.css">
 </head>
 <body data-slide="push">
-  <div id="panel-left" class="mdm-panel">
+  <div id="panel-left" class="slider-panel">
     <ul>
-      <li>
-        <i class="fa fa-home"></i><a href="#">Home</a>
-      </li>
-      <li>
-        <i class="fa fa-folder-o"></i><a href="#">Collections</a>
-      </li>
-      <li>
-        <i class="fa fa-bookmark"></i><a href="#">Bookmarks</a>
-      </li>
-      <li>
-        <i class="fa fa-bar-chart"></i><a href="#">Stats</a>
-      </li>
-      <li>
-        <i class="fa fa-plus"></i><a href="#">New Story</a>
-      </li>
+      <li><i class="fa fa-home"></i><a href="#">Home</a></li>
+      <li><i class="fa fa-folder-o"></i><a href="#">Collections</a></li>
+      <li><i class="fa fa-bookmark"></i><a href="#">Bookmarks</a></li>
+      <li><i class="fa fa-bar-chart"></i><a href="#">Stats</a></li>
+      <li><i class="fa fa-plus"></i><a href="#">New Story</a></li>
     </ul>
   </div>
   <div class="container-fluid wrapper">
