--- a/templates/code-templates/slider-template.html
+++ b/templates/code-templates/slider-template.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/login.css">
 </head>
 <body data-slide="push">
-  <div id="panel-id">
+  <div id="panel-id" class="slider-panel">
     <!-- panel content here -->
   </div>
   <div class="wrapper">
