--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Paper - Templates</title>
-  <meta name="description" content="">
+  <title>Templates - Paper | A Simple, Elegant &amp; Flat Bootstrap Theme</title>
+  <meta name="description" content="A Simple, Elegant &amp; Flat Bootstrap Theme">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="../dist/css/paper.min.css">
   <link rel="stylesheet" href="css/prism.css">
